--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.DebtorsApp">
+            android:theme="@style/Theme.App.MySplash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
