disable crashlytics in debug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,14 @@
         <!--        change with real value-->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-3940256099942544~6300978111" />
+            android:value="ca-app-pub-3940256099942544~6300978111"
+            />
+
+        <!-- disable crashlytics in debug -->
+        <meta-data
+            android:name="firebase_crashlytics_collection_enabled"
+            android:value="${crashlyticsCollectionEnabled}" />
+
     </application>
 
 </manifest>
