--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ lifecycleRuntimeKtx = "2.8.4"
 activityCompose = "1.9.1"
 composeBom = "2024.08.00"
 materialIconsExtended = "1.6.8"
-navigationCompose = "2.7.7"
+navigationCompose = "2.8.0"
 firebaseCrashlytics = "19.0.3"
 googleGmsGoogleServices = "4.4.2"
 googleFirebaseCrashlytics = "3.0.2"
@@ -20,6 +20,8 @@ ksp = "2.0.0-1.0.21"
 playServicesAds = "23.3.0"
 reviewKtx = "2.0.1"
 roomRuntime = "2.6.1"
+kotlinxSerializationJson = "1.5.0"
+
 
 
 [libraries]
@@ -50,6 +52,7 @@ firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashly
 ksp-gradlePlugin = { group = "com.google.devtools.ksp", name = "com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
 play-services-ads = { module = "com.google.android.gms:play-services-ads", version.ref = "playServicesAds" }
 review-ktx = { module = "com.google.android.play:review-ktx", version.ref = "reviewKtx" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 
 
 [plugins]
@@ -59,4 +62,6 @@ googleGmsGoogleServices = { id = "com.google.gms.google-services", version.ref =
 googleFirebaseCrashlytics = { id = "com.google.firebase.crashlytics", version.ref = "googleFirebaseCrashlytics" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+kotlinxSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+
 
