--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,16 @@
             </intent-filter>
         </activity>
 
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <!--        change with real value-->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
@@ -40,5 +50,7 @@
             android:value="${crashlyticsCollectionEnabled}" />
 
     </application>
+
+
 
 </manifest>
